--- a/package.json
+++ b/package.json
@@ -1,19 +1,16 @@
 {
   "name": "repro",
   "scripts": {
-    "dev": "tsnd --respawn src/index.ts"
+    "dev": "tsnd --notify --respawn src/index.ts"
   },
   "dependencies": {
-    "@apollo/client": "^3.2.5",
-    "@graphql-tools/links": "7.0.2",
-    "bufferutil": "^4.0.1",
-    "graphql-tools": "7.0.2",
-    "utf-8-validate": "^5.0.2",
-    "ws": "^7.3.1"
+    "graphql": "^15.4.0",
+    "graphql-tools": "7.0.3-alpha-3f7e98ee.0"
   },
   "devDependencies": {
-    "@types/ws": "^7.2.8",
-    "typescript": "^4.0.3"
+    "ts-node": "^9.0.0",
+    "ts-node-dev": "^1.0.0",
+    "typescript": "^4.1.2"
   },
   "private": true
 }
